--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "discord.js": "^12.5.3",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "undici": "^5.23.0"
   }
