refreshed bot TOKEN

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN="MTE0Nzg3NTUzMDI2NDMwMTU4OA.GKoGDu.1PUHrB4sbds-5MS8A-0vTR8cuq4X73XlSe28Ao"
+TOKEN="MTE0Nzg3NTUzMDI2NDMwMTU4OA.GzW9ct.1dPVjRSNd9but3AdaUQm7Y6nckHsWLPJqRaAEc"
